src/objects/Enrollment__c.object
<CustomObject>
    <description>Used to store information specific to the enrollment of a participant into a program.</description>
    <fields>
        <fullName>Additional_Phone_Number_for_Legal__c</fullName>
        <description>Additional Phone Number for legal advocate only.</description>
        <inlineHelpText>Additional Phone Number for legal advocate only.</inlineHelpText>
        <label>Additional Phone Number for Legal</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Advocate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program Advocate</description>
        <inlineHelpText>Program Advocate</inlineHelpText>
        <label>Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Child__r.Formula_Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Record__c</fullName>
        <description>Case Record for the participant enrolled in the Program.</description>
        <inlineHelpText>Case Record for the participant enrolled in the Program.</inlineHelpText>
        <label>Case Record</label>
        <referenceTo>Case_Record__c</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Enrollments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Child_Date_of_Birth__c</fullName>
        <formula>Child__r.Birthdate</formula>
        <label>Child Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_Needs_Interpreter__c</fullName>
        <formula>Text(Child__r.Was_an_Interpreter_Used__c)</formula>
        <label>Child Needs Interpreter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Primary_Language__c</fullName>
        <formula>if (INCLUDES(Child__r.Primary_Language__c, &quot;Amharic&quot;), &quot;Amharic&quot;+BR(),null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Arabic&quot;), &quot;Arabic&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Cantonese&quot;), &quot;Cantonese&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Farsi&quot;), &quot;Farsi&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Korean&quot;), &quot;Korean&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Laotian&quot;), &quot;Laotian&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Mandarin&quot;), &quot;Mandarin&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Oromo&quot;), &quot;Oromo&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Portuguese&quot;), &quot;Portuguese&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Punjabi&quot;), &quot;Punjabi&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Russian&quot;), &quot;Russian&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Somali&quot;), &quot;Somali&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Spanish&quot;), &quot;Spanish&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Tagalog&quot;), &quot;Tagalog&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Thai&quot;), &quot;Thai&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Tigrigna&quot;), &quot;Tigrigna&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Urdu&quot;), &quot;Urdu&quot;+BR(), null)+
if (INCLUDES(Child__r.Primary_Language__c, &quot;Vietnamese&quot;), &quot;Vietnamese&quot;, null)</formula>
        <label>Child Primary Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup the child for this program enrollment.</description>
        <inlineHelpText>Lookup the child for this program enrollment.</inlineHelpText>
        <label>Child</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enrollments (Child)</relationshipLabel>
        <relationshipName>ChildEnrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Criminal_Justice_System_Advocacy_Notes__c</fullName>
        <label>Criminal Justice System Advocacy Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Criminal_Justice_System_Advocacy__c</fullName>
        <label>Criminal Justice System Advocacy</label>
        <picklist>
            <picklistValues>
                <fullName>Abuser Misdemeanor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Abuse/Child Sexual Assault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abuser Felony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victim/Defendant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enrollment_Date__c</fullName>
        <description>Date of enrollment in the program.</description>
        <inlineHelpText>Date of enrollment in the program.</inlineHelpText>
        <label>Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>TEXT(Child__r.Gender__c)</formula>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <formula>Text( Child__r.Grade__c )</formula>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household for enrolled participant.</description>
        <inlineHelpText>Household for enrolled participant.</inlineHelpText>
        <label>Household</label>
        <referenceTo>npo02__Household__c</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>Enrollments_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Need_Interpreter__c</fullName>
        <formula>Text(Case_Record__r.Contact__r.Was_an_Interpreter_Used__c)</formula>
        <label>Need Interpreter?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_ID__c</fullName>
        <formula>Case_Record__r.Contact__r.Participant_Id__c</formula>
        <label>Participant ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Name__c</fullName>
        <formula>Case_Record__r.Contact__r.FirstName + &apos; &apos; + Case_Record__r.Contact__r.LastName</formula>
        <label>Participant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <formula>if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Amharic&quot;), &quot;Amharic&quot;+BR(),null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Arabic&quot;), &quot;Arabic&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Cantonese&quot;), &quot;Cantonese&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Farsi&quot;), &quot;Farsi&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Korean&quot;), &quot;Korean&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Laotian&quot;), &quot;Laotian&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Mandarin&quot;), &quot;Mandarin&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Oromo&quot;), &quot;Oromo&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Portuguese&quot;), &quot;Portuguese&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Punjabi&quot;), &quot;Punjabi&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Russian&quot;), &quot;Russian&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Somali&quot;), &quot;Somali&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Spanish&quot;), &quot;Spanish&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Tagalog&quot;), &quot;Tagalog&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Thai&quot;), &quot;Thai&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Tigrigna&quot;), &quot;Tigrigna&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Urdu&quot;), &quot;Urdu&quot;+BR(), null)+
if (INCLUDES(Case_Record__r.Contact__r.Primary_Language__c, &quot;Vietnamese&quot;), &quot;Vietnamese&quot;, null)</formula>
        <label>Primary Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>The Program that the participant is enrolled in.</description>
        <inlineHelpText>The Program that the participant is enrolled in.</inlineHelpText>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <formula>Text(Child__r.Race_Ethnicity__c)</formula>
        <label>Race</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safe_Phone_Number__c</fullName>
        <formula>Case_Record__r.Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Safe Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spanish_Hispanic_Latino__c</fullName>
        <formula>Text( Child__r.SpanishHispanicLatino__c )</formula>
        <label>Spanish/Hispanic/Latino</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Case_Record__r.Contact__r.MailingPostalCode</formula>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Enrollment</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <recordTypes>
        <fullName>CDVRT</fullName>
        <active>false</active>
        <description>CDVRT Specific Record Type</description>
        <label>CDVRT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Children</fullName>
        <active>true</active>
        <description>Children&apos;s Program Specific Record Type</description>
        <label>Children Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Exit</fullName>
        <active>true</active>
        <description>This is the enrollment for exiting participants.</description>
        <label>Exit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal_Advocacy</fullName>
        <active>false</active>
        <description>Legal Advocacy Program Specific Record Type</description>
        <label>Legal Advocacy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mental_Health</fullName>
        <active>false</active>
        <description>Mental Health Program Specific Record Type</description>
        <label>Mental Health Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Women_s_Advocacy</fullName>
        <active>true</active>
        <description>Women&apos;s Advocacy Program Specifc Record Type (incl Bilingual and Shoreline)</description>
        <label>Women&apos;s Advocacy</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Enrollment_On_Exited_CR</fullName>
        <active>true</active>
        <description>If we are trying to enroll a participant in an exited Case Record do not allow.</description>
        <errorConditionFormula>ISPICKVAL(Case_Record__r.Status__c, &apos;Exited&apos;)</errorConditionFormula>
        <errorMessage>You cannot create an enrollment for an Exited case record.</errorMessage>
    </validationRules>
</CustomObject>